build: html element structure for chickennoodles.html +  image of the food

--- a/recipes/chickennoodles.html
+++ b/recipes/chickennoodles.html
@@ -6,6 +6,49 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Kung Pao Chicken Noodles </h1>
+    <img src="../chicken-oodles.jpg" alt="a bowl of chicken-oodles" width="240">
+    <h2>Let’s combine the BEST of both worlds and make Kung Pao Chicken Noodles.</h2>
+    <p>Kung Pao Chicken Noodles is a dish that’s basically a flavour-packed party in a bowl. Picture this: tender chicken and crunchy peanuts cozied up with slurp-worthly noodles, dancing in a perfectly sweet and spicy sauce.</p>
+    <h4>Ingredients</h4>
+    <ul>
+        <li>6 Chicken Thighs, boneless skin on, cut into bite-size pieces</li>
+        <li>4 packs of Hand Cut Noodles</li>
+        <li>2 tablespoon ginger, julienne</li>
+        <li>1 tablespoon garlic, minced</li>
+        <li>2 green onion, chopped</li>
+        <li>1 tsp Sichuan peppercorn</li>
+        <li>¼ cup dry red chili</li>
+    </ul>
+    <h4>Chicken Marinade</h4>
+    <ul>
+        <li>1.5 tablespoon soy sauce</li>
+        <li>1.5 tablespoons oyster sauce</li>
+        <li>1 tsp black pepper</li>
+        <li>2 tablespoons cornstarch</li>
+    </ul>
+    <h4>Sauce</h4>
+    <ul>
+        <li>4 tablespoons soy sauce</li>
+        <li>2 tablespoon black vinegar</li>
+        <li>1 tablespoon dark soy sauce</li>
+        <li>2 tablespoon sugar</li>
+        <li>½ cup water</li>
+        <li>1 tsp cornstarch</li>
+    </ul>
+    <h4>Toppings</h4>
+    <ul>
+        <li>Crushed roasted peanuts</li>
+    </ul>
+    <h4>Step</h4>
+    <ol>
+        <li>Marinate the chicken with 1.5 tablespoon soy sauce, 1.5 tablespoon oyster sauce, 1 tsp black pepper, and 2 tablespoon corn starch for 10 minutes.</li><br>
+        <li>In the meantime, mix soy sauce, black vinegar, dark soy sauce, sugar, water, and cornstarch. Mix well, making sure the corn starch isn’t settled at the bottom.</li><br>
+        <li>Bring a pot of water to boil, and cook noodles for 4-5 minutes or until al-dente. Drain and set aside. You can drizzle 1 tsp of oil and toss the noodle to prevent the noodles from sticking together.</li><br>
+        <li>In a pan, drizzle in oil and add in the chicken. Pan-fry for 8-9 minutes or until chicken is brown.</li><br>
+        <li>In the same pan, add ginger, Sichuan peppercorn, dry red chili, white parts of the green onion, and garlic. Saute for 2-3 minutes or until fragrant.</li><br>
+        <li>Next, add noodles, chicken, and drizzle to the sauce. Saute on high heat for 2-3 minutes or until noodles soak up all the sauce.</li><br>
+        <li>Finish off with roasted peanuts and green onion, and enjoy!</li>
+    </ol>
 </body>
 </html>
