fix: broken hyperlink to chickhen-noodle.jpg image

--- a/recipes/chickennoodles.html
+++ b/recipes/chickennoodles.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Kung Pao Chicken Noodles </h1>
-    <img src="../chicken-oodles.jpg" alt="a bowl of chicken-oodles" width="240">
+    <img src="../chicken-noodles.jpg" alt="a bowl of chicken-oodles" width="240">
     <h2>Let’s combine the BEST of both worlds and make Kung Pao Chicken Noodles.</h2>
     <p>Kung Pao Chicken Noodles is a dish that’s basically a flavour-packed party in a bowl. Picture this: tender chicken and crunchy peanuts cozied up with slurp-worthly noodles, dancing in a perfectly sweet and spicy sauce.</p>
     <h4>Ingredients</h4>
