--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/chickennoodles.html">Chicken Noodles</a></li>
+        <li><a href="recipes/friedchicken.html">Fried Chicken</a></li>
     </ul>
 </body>
 </html>
