--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="recipes/chickennoodles.html">Chicken Noodles</a></li>
         <li><a href="recipes/friedchicken.html">Fried Chicken</a></li>
+        <li><a href="recipes/sweetsourchicken.html">Sweet and sour Chicken</a></li>
     </ul>
 </body>
 </html>
