--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/chickennoodles.html">Chicken Noodles</a></li>
+    <ul class="bullet-point">
         <li><a href="recipes/friedchicken.html">Fried Chicken</a></li>
+        <li><a href="recipes/chickennoodles.html">Chicken Noodles</a></li>
         <li><a href="recipes/sweetsourchicken.html">Sweet and sour Chicken</a></li>
     </ul>
 </body>
