add CSS layout design for chicken noodles recipe

--- a/index.html
+++ b/index.html
@@ -8,10 +8,21 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul class="bullet-point">
-        <li><a href="recipes/chickennoodles.html">Chicken Noodles</a></li>
-        <li><a href="recipes/friedchicken.html">Fried Chicken</a></li>
-        <li><a href="recipes/sweetsourchicken.html">Sweet and sour Chicken</a></li>
-    </ul>
+    <div class="flex-container">
+        <img src="./chicken-noodles.jpg" alt="a bowl of chicken Noodles" width="192,5">
+        <div class="flex-container-nested">
+            <p id="category">Asian</p>
+            <h2>Kung Pao Chicken Noodles</h2>
+            <p>Basically Party In A Bowl</p>
+            <button><a href="recipes/chickennoodles.html">Cehck Out Recipe</a></button>
+        </div>
+    </div>
+    <!-- <div>
+        <ul class="bullet-point">
+            <li><a href="recipes/chickennoodles.html">Chicken Noodles</a></li>
+            <li><a href="recipes/friedchicken.html">Fried Chicken</a></li>
+            <li><a href="recipes/sweetsourchicken.html">Sweet and sour Chicken</a></li>
+        </ul>
+    </div> -->
 </body>
 </html>
