add CSS layout design for fried chicken and sweet sour chicken + add main element tag

--- a/index.html
+++ b/index.html
@@ -8,21 +8,34 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <div class="flex-container">
-        <img src="./chicken-noodles.jpg" alt="a bowl of chicken Noodles" width="192,5">
-        <div class="flex-container-nested">
-            <p id="category">Asian</p>
-            <h2>Kung Pao Chicken Noodles</h2>
-            <p>Basically Party In A Bowl</p>
-            <button><a href="recipes/chickennoodles.html">Cehck Out Recipe</a></button>
+    <main>
+        <div class="flex-container">
+            <img src="./chicken-noodles.jpg" alt="a bowl of chicken Noodles" width="192,5">
+            <div>
+                <p id="Tag">Chinese</p>
+                <h2>Kung Pao Chicken Noodles</h2>
+                <p>Basically Party In A Bowl</p>
+                <button><a href="recipes/chickennoodles.html">Cehck Out Recipe</a></button>
+            </div>
         </div>
-    </div>
-    <!-- <div>
-        <ul class="bullet-point">
-            <li><a href="recipes/chickennoodles.html">Chicken Noodles</a></li>
-            <li><a href="recipes/friedchicken.html">Fried Chicken</a></li>
-            <li><a href="recipes/sweetsourchicken.html">Sweet and sour Chicken</a></li>
-        </ul>
-    </div> -->
+        <div class="flex-container">
+            <img src="./fried-chicken.jpeg" alt="a plate of fried-chicken Noodles" width="192,5">
+            <div>
+                <p id="Tag">Japanese</p>
+                <h2>Fried Chicken</h2>
+                <p>Can you think of something crunchier?</p>
+                <button><a href="recipes/friedchicken.html">Fried Chicken</a></button>
+            </div>
+        </div>
+        <div class="flex-container">
+            <img src="./sweet-sour-chicken.jpeg" alt="a bowl of chicken" width="192,5">
+            <div>
+                <p id="Tag">Thai</p>
+                <h2>Sweet and sour Chicken</h2>
+                <p>Every child's favorite</p>
+                <button><a href="recipes/sweetsourchicken.html">Sweet and sour Chicken</a></button>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
